# roadnetworkkit

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  only_mount_and_copy_data.sh  setup.sh  setup_ubuntu.sh
src/: generalmap.cpp  generalmap.h  geomerty.h  gps.cpp  gps.h  map_graph_property.hpp  roadmap.cpp  roadmap.h  time_estimate.cpp  time_estimate.h  traits.hpp  util.h
src/T-driver/: VECluster.cpp  drawAllCrossInfo.cpp  statistics.cpp  visualEdge.cpp
src/bj-road-epsg3785/: bj_road_epsg3785.h
src/experiment/: com.cpp  com.h  foot_graph_gen.cpp  ivmm_speed_test.cpp  main.cpp  turn_stat.cpp
src/ivmm/: ivmm.cpp  ivmm.h
src/map-match/: mapMatch.cpp  map_match.cpp
src/path-restore/: HighLevelMap.cpp  HighLevelMap.h  highlevelmap.cpp  highlevelmap.h
src/test/: test.cpp  testhighlevelmap.cpp  testivmm.cpp  testroadmap.cpp
src/tools/: generateShp.cpp  trajToShp.cpp
test/: test.cpp
workspace/: addoutput.py  default.ini
